Fix block spacing issue between icons and labels Fix minor issues with static page content

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,3 +18,8 @@ body {
 .wp-block-navigation__responsive-container {
     padding: var(--wp--preset--spacing--20) !important;
 }
+
+// Fix for lack of padding between icons and labels.
+.areoi-icon {
+    margin-right: 0.5em !important;
+}
